<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SigninActivity"
        android:background="@color/colorPrimaryDark">

    <RelativeLayout
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_height="250dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo"/>

    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/email_text_signup"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
        <EditText
                android:id="@+id/first_name_text_signup"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:drawablePadding="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textSize="15sp"/>
        <EditText
                android:id="@+id/last_name_text_signup"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:drawablePadding="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="15sp"/>

    </LinearLayout>
    <EditText
            android:id="@+id/email_text_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/login_header"
            android:background="@android:drawable/editbox_background"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"/>
    <EditText
            android:id="@+id/password_text_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_below="@+id/email_text_signup"
    />
    <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/password_text_signup"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorPrimary"/>

    <TextView
            android:id="@+id/signin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/signup_btn"
            android:layout_marginTop="15dp"
            android:text="@string/already_have_an_accout_sign_in"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="100dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
        <TextView
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="English"/>
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="•"/>
        <TextView
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="Spanish"/>
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="•"/>
        <TextView
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="Chinese"/>
    </LinearLayout>

    <include
            android:id="@+id/signup_load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/activity_load"
            android:visibility="invisible"/>


</RelativeLayout>